2005-06-08  Bruno Haible  <bruno@clisp.org>

	* binary-io.h (fileno): Undefine before defining it. Avoids a gcc
	warning on mingw.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-03-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (examplesbuildauxdir): Renamed from examplesconfigdir.
	(examplesbuildaux_DATA): Renamed from examplesconfig_DATA.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2004-09-12  Bruno Haible  <bruno@clisp.org>

	* hash.c: Include <limits.h> instead of <values.h>.
	Assume an ANSI C implementation with stdlib.h, string.h.
	(BITSPERBYTE, LONGBITS, bcopy): Remove macros.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (OBJECTS): Remove strtoul.obj.
	(strtoul.obj): Remove target.
	* Makefile.vms (OBJECTS): Remove strtoul.obj.
	(strtoul.obj): Remove target.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* allocsa.h: Add extern "C" for C++.
	* xallocsa.h: Likewise.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* exitfail.h (exit_failure): Add DLL_VARIABLE attribute.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* obstack.c: Update from current gnulib version.

2005-02-10  Bruno Haible  <bruno@clisp.org>

	* allocsa.h (sa_alignof): Define differently with AIX xlc, to avoid
	a bug of this compiler on AIX 3.2.5 dealing with enums.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* c-strcase.h: New file, based on strcase.h.
	* c-strcasecmp.c: New file, based on strcasecmp.c.
	* c-strncasecmp.c: New file, based on strcasecmp.c.
	* Makefile.am (libgettextlib_la_SOURCES): Add c-strcase.h,
	c-strcasecmp.c, c-strncasecmp.c.
	* Makefile.msvc (OBJECTS): Add c-strcasecmp.obj, c-strncasecmp.obj.
	(c-strcasecmp.obj, c-strncasecmp.obj): New rules.
	* Makefile.vms (OBJECTS): Add c-strcasecmp.obj, c-strncasecmp.obj.