@@ -1,5 +1,10 @@
 2005-06-08  Bruno Haible  <bruno@clisp.org>
 
+	* canonicalize.c (__realpath): Avoid gcc warnings on platforms that
+	don't support symbolic links.
+
+2005-06-08  Bruno Haible  <bruno@clisp.org>
+
 	* binary-io.h (fileno): Undefine before defining it. Avoids a gcc
 	warning on mingw.
 
